Update development information